Problem with images 80% solved