@@ -9,15 +9,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.multipart.MultipartFile;
-
-import java.io.IOException;
-import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/cars")
@@ -31,16 +24,15 @@ public class CarController {
     private CarMapper carMapper;
 
     @GetMapping
-    public ResponseEntity<List<Car>> getAllCars() {
+    public ResponseEntity<List<CarDTO>> getAllCars() {
         List<Car> cars = carService.allCars();
 
         // Convertim lista de Car în CarDTO
         List<CarDTO> carDTOs = cars.stream()
-                .map(carMapper::convertToCarDTO)
-                .collect(Collectors.toList());
+                .map(carMapper::convertToCarDTO).toList();
 
         // Returnăm lista de CarDTO într-un ResponseEntity
-        return ResponseEntity.ok(cars);
+        return ResponseEntity.ok(carDTOs);
     }
 
     @GetMapping("/{id}")
@@ -49,23 +41,6 @@ public class CarController {
         return new ResponseEntity<Optional<Car>>(carService.singleCar(objectId), HttpStatus.OK);
     }
 
-//    @GetMapping("/{id}")
-//    public ResponseEntity<CarDTO> getCarById(@PathVariable String id) {
-//        // Convertim String-ul în ObjectId
-//        ObjectId objectId;
-//        try {
-//            objectId = new ObjectId(id);
-//        } catch (IllegalArgumentException e) {
-//            return ResponseEntity.badRequest().body(null); // Poate returna un mesaj de eroare personalizat
-//        }
-//
-//        Car car = carService.getCarById(objectId);
-//
-//        // Convertim Car în CarDTO
-//        CarDTO carDTO = carMapper.convertToCarDTO(car);
-//
-//        return ResponseEntity.ok(carDTO);
-//    }
 
     @PostMapping
     public ResponseEntity<Car> addCar(@RequestBody Car carData) throws Exception {
